--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Media Room Demo</title>
   </head>
   <body>
     <div class="app-wrap" id="root"></div>
+    <audio id="audio" autoplay></audio>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
