room, reduce, consume successful

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,7 @@
     <title>Media Room Demo</title>
   </head>
   <body>
-    <div class="app-wrap" id="root"></div>
-    <audio id="audio" autoplay></audio>
+    <div id="root" class="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
