add meta tags and favicon

--- a/client-v2/index.html
+++ b/client-v2/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>kateroom</title>
+    <title>
+      Kateroom — видеоконференции, групповые звонки для совместной работы и
+      общения
+    </title>
+    <meta
+      name="description"
+      content="Сервис для групповых видеовстреч и видеоконференций в браузере. Быстое подключение без регистрации, управление микрофоном и камерой, демонстрация экрана и список участников."
+    />
   </head>
   <body>
     <div id="root" class="app"></div>
